# minibench

./: .gitignore  README.md  gen_results_csv.py  model_download_list.sh  pyproject.toml  requirements.txt  run_bench.py  watch_results.ipynb  watch_results.py  watch_results_streamlit.py
Datasets/: Dataset.py  ProcessRows.py  plot.py
investigation/: summarisation.py
