[tool.poetry]
name = "minibench"
version = "0.1.0"
description = ""
authors = ["Sam Purkis <sam.purkis@zimmerbiomet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
datasets = "^2.14.5"
tqdm = "^4.66.1"
pandas = "^2.1.1"
llama-cpp-python = "^0.2.11"
polars = "^0.19.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
