[tool.poetry]
name = "minibench"
version = "0.1.0"
description = ""
authors = ["Sam Purkis <sam.purkis@zimmerbiomet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
datasets = "^2.14.5"
tqdm = "^4.66.1"
pandas = "^2.1.1"
llama-cpp-python = "^0.2.11"
polars = "^0.19.7"
matplotlib = "^3.8.0"
bert-score = "^0.3.13"
plotly = "^5.17.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.9.1"}
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
